--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node-dev' dist/index.js",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +29,7 @@
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.0.0",
+    "nodemon": "^3.1.10",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
