--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node-dev' dist/index.js",
-    "start": "node dist/index.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node-dev' dist/server.js",
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vinicius Ferreira",
@@ -28,6 +28,7 @@
     "@types/node": "^24.0.3",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
+    "globals": "^16.2.0",
     "jest": "^30.0.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.1",
